<resources>
    <string name="app_name">LoginUI</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_upper_case">LOGIN</string>
    <string name="register">Register</string>
    <string name="ui_login">UI Login</string>
    <string name="register_upper_case">REGISTER</string>
    <string name="name">Name</string>
</resources>